--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
 
                                         <p>
                                            7 years coding. <br> Very proactive with excellent debugging skills. <br>
-                                        My focus technologies are JavaScript, Angular CLI, PHP (mvc), Rest APIs, MySQL, HTML5, CSS and some other tools.
-                                            <a href="/#resume">Go to Resume</a> <br><br>
+                                        My focus technologies are JavaScript, Angular CLI, PHP (mvc), Rest APIs, MySQL, HTML5, CSS and some other tools.<br>
+                                            
+                                            <a href="/#resume">Go to Resume</a> <br>
                                         </p>
 
                                     </div>
