--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
                                 <div class="col-sm-4 col-md-4 col-lg-4">
                                     <div class="photo">
-                                        <img src="/antonio-martinez.jpg" alt="Antonio Martinez">
+                                        <img src="/images/antonio-martinez.jpg" alt="Antonio Martinez">
                                     </div>
                                     
                                     
