--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@ Beyond the professional area, I have also gained a lot of experience from my per
                                         <li>External Login APIs, facebook SDK, Google.</li>
                                         <li>Consuming or developing APIs from scratch. Rest and SOAP types.</li>
                                         <li>Creation of front-end interfaces with HTML5, CSS, js or Angular CLI.</li>
-                                        <li>Understanding of async data with PHP, ajax and others.</li>
+                                        <li>Async data with PHP, ajax and others.</li>
                                         <li>Experience developing custom Wordpress plugins, Widgets and Themes.</li>
                                         <li>System maintenance and debugging. (PHP, JavaScript, MySQL).</li>
                                         <li>Dynamic Responsive websites and Web applications, using CSS, jQuery, Angular, Bootstrap and others.</li>
                                         <li>Websites and Web applications Optimization. (Improving the code, minifying, data compressing, etc).</li>
                                         <li>Scraping with JavaScript.</li>
                                         <li>Server management and ability to create a development environment for any lamp project.</li>
-                                        <li>Understanding of web master concepts (SSL, IIS, DNS and IP configuration, Cloudflare).</li>
+                                        <li>Understanding of web master concepts (SSL, IIS, DNS, Reverse proxys, and IP configuration, Cloudflare).</li>
                                     </ul>
 
 
