--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
 
                                     <p>                                        
                                     7 years coding. With excellent debugging skills. <br>
-                                        My focus technologies are JavaScript, typeScript, Angular CLI, PHP, Rest APIs, MySQL, HTML5 and CSS.
+                                        My focus technologies are JavaScript, Angular CLI, PHP, Rest APIs, MySQL, HTML5 and CSS.
                                         <br><br>
-Experience with custom developments from scratch and also with PHP or JavaScripts frameworks, for example, Laravel or Angular, very good working front-end and backend even with database design and structuring.
+Experience with custom developments from scratch and also with PHP or JavaScripts frameworks, Laravel or Angular, very good working front-end and backend even with database design and structuring.
 <br><br>
 Beyond the professional area, I have also gained a lot of experience from my personal projects. I have been trying a lot of crazy things and personal projects with large code lines and many hours of work.
                                       
