--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                         <li><span class="title">Age</span><span class="value">24</span></li>
                                         <li><span class="title">Residence</span><span class="value">San José, Costa Rica (GMT-6)</span></li>
                                         <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonios.martinez.dev@gmail.com</a> </span></li>
-                                        <li><span class="title">Phone</span><span class="value">+506 6129 9074</span></li>
+                                        <li><span class="title">Phone</span><span class="value"><a href="tel:50661299074"> +506 6129 9074</a></span></li>
                                         <li><span class="title">Availability</span><span class="value available">Available</span></li>
                                         <li><span class="title">Languages</span><span class="value available">Spanish/English</span></li>
                                         <!--<li><span class="title">Desired Salary </span><span class="value available">2500 US$/mo</span></li>-->
