--- a/index.html
+++ b/index.html
@@ -162,9 +162,10 @@
                                         </div>
 
                                         <p>
-                                           7 years coding. <br> Very proactive with excellent debugging skills. <br>
-                                        My focus technologies are JavaScript, Angular CLI, PHP (mvc), Rest APIs, MySQL, HTML5, CSS and some other tools.<br>
-                                            
+                                           7 years coding. <br> 
+                                            Very proactive with excellent debugging skills and
+                       experience. Many hours spent writing and improving code. I could definitely help to develop a high quality product.
+                                          
                                             <a href="/#resume">Go to Resume</a> <br>
                                         </p>
 
