--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                         <p>
                                            7 years coding. <br> 
                                             Very proactive with excellent debugging skills and
-                       experience. Many hours spent writing and improving code. <br> I could definitely help to develop a high-quality product.
+                       experience. Many hours spent writing and improving code. <br> I could definitely help to develop a high-quality product.<br>
                                           
                                             <a href="/#resume">Go to Resume</a> <br>
                                         </p>
