--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                         </div>
 
                                         <p>
-                                           7 years coding. <br> 
+                                           7 years of coding. <br> 
                                             Very proactive with excellent debugging skills and
                        experience. Many hours spent writing and improving code. <br> I could definitely help to develop a high-quality product.<br>
                                           
