--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ Beyond the professional area, I have also gained a lot of experience from my per
                                 <div class="class="col-sm-12 col-md-12 col-lg-12"">
                                     <div class="block">
                                         <div class="block-title">
-                                              <h3>Code sample: <span>Angular App + PHP Api Rest</span></h3>
+                                              <h3>Code sample <span>Angular App + PHP Api Rest</span></h3>
                                         </div>
 
                                        <img src="/code.png">
