--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
                                 <div class="col-sm-4 col-md-4 col-lg-4">
                                     <div class="photo">
-                                        <img src="https://raw.githubusercontent.com/MartinezAntonio/martinezantonio.github.io/master/julio-antonio-martinez.jpg" alt="Antonio Martinez">
+                                        <img src="https://raw.githubusercontent.com/MartinezAntonio/martinezantonio.github.io/master/julio-antonio-martinez-oxigeno.png" alt="Antonio Martinez">
                                     </div>
                                     
                                     
