--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
 
                                         <p>
                                            7 years of coding. <br> 
-                                            Very proactive with excellent debugging skills and
-                       experience. Many hours spent writing and improving code. <br> I could definitely help to develop a high-quality product.<br>
+                                            I have excellent debugging skills and experience dealing with big issues and bugs.
+                                            Many hours refactoring and writing new custom code. <br> I could help to develop a good high-quality product.<br>
                                           
-                                            <a href="/#resume">Go to Resume</a> <br>
+                                            <a href="/#resume">Read more</a> <br>
                                         </p>
 
                                     </div>
