--- a/index.html
+++ b/index.html
@@ -208,14 +208,27 @@
                                     </div>
 
                                     <p>                                        
-                                    7 years coding. With excellent debugging skills. <br>
-                                        My focus technologies are JavaScript, Angular CLI, PHP, Rest APIs, MySQL, HTML5 and CSS.
-                                        <br><br>
-Experience with custom developments from scratch and also with PHP or JavaScripts frameworks, Laravel or Angular, very good working front-end and backend even with database design and structuring.
-<br><br>
-Beyond the professional area, I have also gained a lot of experience from my personal projects. I have been trying a lot of crazy things and personal projects with large code lines and many hours of work.
-                                      
+    Hello,
 
+I consider myself a full-stack web developer because I have the knowledge and ability to be able to develop or maintain a web system from its front-end, backend, server, and search engine optimization.
+
+I have more than 7 years of experience in developing and deploying projects for the internet successfully and coding with excellent debugging skills and experience dealing with big issues and bugs.
+
+Many hours refactoring and writing new custom lines codes to develop huge websites, gambling and betting systems as well as I have assisted in the maintenance and development of new features to banking accounting systems.
+
+I have been in charge of campaigns on google for clients such as luxury hotels in Central America and Mexico with a target public in Central Americ, Europe, and North America.
+
+
+My focus technologies and tools expertise are:
+
+* PHP
+* MySql
+* Javascript
+* Angular
+* CSS
+* HTML
+* Google Analytics
+* Google ADS
                                     </p>
 
                                
