--- a/index.html
+++ b/index.html
@@ -210,25 +210,35 @@
                                     <p>                                        
     Hello,
 
-I consider myself a full-stack web developer because I have the knowledge and ability to be able to develop or maintain a web system from its front-end, backend, server, and search engine optimization.
+I consider myself a full-stack web developer because I have the knowledge and ability to be able to develop or maintain a web system from front-end, backend, server, and search engine optimization. <br><br>
 
-I have more than 7 years of experience in developing and deploying projects for the internet successfully and coding with excellent debugging skills and experience dealing with big issues and bugs.
+I have more than 7 years of experience in developing and deploying projects for the internet with success. <br><br>
 
-Many hours refactoring and writing new custom lines codes to develop huge websites, gambling and betting systems as well as I have assisted in the maintenance and development of new features to banking accounting systems.
+Many hours reading and understanding documentation, refactoring and writing code and very good dealing with issues and bugs. <br><br>
+                                        
+                                      In some projects I led and was also part of the programming team for the development of huge websites, gambling and betting systems as well as I have assisted in the maintenance and development of new features to banking accounting systems and report systems. <br><br>
 
-I have been in charge of campaigns on google for clients such as luxury hotels in Central America and Mexico with a target public in Central Americ, Europe, and North America.
+I have been in charge of campaigns on google for clients such as luxury hotels in Central America and Mexico with a target public in Central Americ, Europe, and North America. <br><br>
 
 
 My focus technologies and tools expertise are:
 
 * PHP
+                                        <br>
 * MySql
+                                        <br>
 * Javascript
+                                        <br>
 * Angular
+                                        <br>
 * CSS
+                                        <br>
 * HTML
+                                        <br>
 * Google Analytics
+                                        <br>
 * Google ADS
+                                        <br>
                                     </p>
 
                                
