--- a/index.html
+++ b/index.html
@@ -161,9 +161,11 @@
                                         </div>
 
                                         <p>
-                                           7 years of coding. <br> 
-                                            I have excellent debugging skills and experience dealing with big issues and bugs.
-                                            Many hours refactoring and writing new custom code. <br> I could help to develop a good high-quality product.<br>
+                                           I have more than 7 years of experience in developing and deploying huge projects to the Internet with success.
+
+From writing code, dealing with bugs, and setting server cloud enviroment.
+                                            
+                                            <br>
                                           
                                             <a href="/#resume">Read more</a> <br>
                                         </p>
