--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ From writing code, dealing with bugs, and setting server cloud enviroments.
                                         <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonios.martinez.dev@gmail.com</a> </span></li>
                                         <li><span class="title">Phone</span><span class="value"><a href="tel:50661299074"> +506 6129 9074</a></span></li>
                                         <li><span class="title">Availability</span><span class="value available">Available</span></li>
-                                        <li><span class="title">Languages</span><span class="value available">Spanish/English</span></li>
+                                        <li><span class="title">Languages</span><span class="value available">Spanish/English/German</span></li>
                                         <!--<li><span class="title">Desired Salary </span><span class="value available">2500 US$/mo</span></li>-->
                                     </ul>
                                 </div>
@@ -352,7 +352,7 @@ I have been in charge of campaigns on google for clients such as luxury hotels i
                                 <div class="col-sm-6 col-md-6 col-lg-6">
                                     <div class="block">
                                         <div class="block-title">
-                                            <h3>Front-end <span>Skills</span></h3>
+                                            <h3>Technologies and tools expertise:</h3>
                                         </div>
 
                                         <div class="skills-info">
