--- a/index.html
+++ b/index.html
@@ -412,6 +412,11 @@ I have been in charge of campaigns on google for clients such as luxury hotels i
                                                 <div class="skill-percentage skill-4"></div>
                                             </div>
                                         
+                                            
+                                            <h4>GIT</h4>
+                                            <div class="skill-container">
+                                                <div class="skill-percentage skill-4"></div>
+                                            </div>
                                         </div>
 
                                     </div>
