--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ I have more than 7 years of experience in developing and deploying projects for 
 
 Many hours reading and understanding documentation, refactoring and writing code and very good dealing with issues and bugs. <br><br>
                                         
-                                      In some projects I led and was also part of the programming team for the development of huge websites, gambling and betting systems as well as I have assisted in the maintenance and development of new features to banking accounting systems and report systems. <br><br>
+                                      In some projects I led and was also part of the programming team for the development of huge websites, gambling and betting systems as well as I have assisted in the maintenance and development of new features to banking accounting systems and big data reports. <br><br>
 
 I have been in charge of campaigns on google for clients such as luxury hotels in Central America and Mexico with a target public in Central Americ, Europe, and North America. <br><br>
 
