--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                         <a class="pt-trigger" href="#resume">Resume</a>
                     </li>
 
-                  <!--  <li>
-                        <a class="pt-trigger" href="#portfolio">Portfolio</a>
-                    </li> -->
+                    <li>
+                        <a class="pt-trigger" href="#portfolio">Projects</a>
+                    </li> 
                 </ul>
                 <!-- /Main menu -->
             </div>
