--- a/index.html
+++ b/index.html
@@ -210,19 +210,13 @@ From writing code, dealing with bugs, and setting server cloud enviroments.
                                     </div>
 
                                     <p>                                        
-    Hi,
+I have the ability to develop or maintain a web system from front-end to backend and server environment. <br>   
 
-I consider myself a full-stack web developer because I have the knowledge and ability to be able to develop or maintain a web system from front-end, backend, server, and search engine optimization. <br><br>
+I have more than 7 years of experience in developing and deploying projects to internet with success and coding with great debugging skills and experience dealing with big issues and bugs in JavaScript and PHP.<br>  
 
-I have more than 7 years of experience in developing and deploying projects for the internet with success. <br><br>
+Many hours refactoring and writing code to develop huge custom websites, WordPress websites, report systems. online games, gambling, scores and betting systems.<br>
 
-Many hours reading and understanding documentation, refactoring and writing code and very good dealing with issues and bugs. <br><br>
-                                        
-                                      In some projects I led and was also part of the programming team for the development of huge websites, gambling and betting systems as well as I have assisted in the maintenance and development of new features to banking accounting systems and big data reports. <br><br>
-
-I have been in charge of campaigns on google for clients such as luxury hotels in Central America and Mexico with a target public in Central Americ, Europe, and North America. <br><br>
-
-
+I have been in charge of campaigns on google for clients such as luxury hotels in Central America and Mexico with a target public in Central Americ, Europe, and North America.<br>
 
                                     </p>
 
