--- a/index.html
+++ b/index.html
@@ -208,11 +208,15 @@
                                     </div>
 
                                     <p>                                        
-I have the ability to develop or maintain a web system from front-end to backend and server environment with more than 7 years of experience in developing and deploying projects to internet with success and coding with great debugging skills and experience dealing with big issues and bugs in JavaScript and PHP.<br>  
+Full Stack Web Developer with ability to develop or maintain a web system from front-end to backend. <br> 
 
-Many hours refactoring and writing code to develop huge custom websites, WordPress websites, report systems. online games, gambling, scores and betting systems.<br><br>
+7 years of experience in developing and deploying projects to internet with success.<br>
 
-I have been in charge of campaigns on google for clients such as luxury hotels in Central America and Mexico with a target public in Central Americ, Europe, and North America.<br>
+Programmer with great debugging skills and very good dealing with big issues and bugs in JavaScript and PHP.<br>
+
+Many hours refactoring and writing code to develop huge custom websites, WordPress, landing pages with complex tracking methods, big data reports. online games, gambling, scores and betting systems.<br>
+
+I have been in charge of campaigns on google for clients such as luxury hotels in Central America and Mexico with a target public in Central Americ, Europe, and North America.br>
 
                                     </p>
 
