--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@ Full Stack Web Developer with ability to develop or maintain a web system from f
 
 Programmer with great debugging skills and very good dealing with big issues and bugs in JavaScript and PHP.<br>
 
-Many hours refactoring and writing code to develop huge custom websites, WordPress, landing pages with complex tracking methods, big data reports. online games, gambling, scores and betting systems.<br>
+Many hours refactoring and writing code to develop huge custom websites, WordPress, landing pages with complex tracking methods, big data reports. online games, gambling, scores and betting systems.<br><br>
 
-I have been in charge of campaigns on google for clients such as luxury hotels in Central America and Mexico with a target public in Central Americ, Europe, and North America.br>
+I have been in charge of campaigns on google for clients such as luxury hotels in Central America and Mexico with a target public in Central Americ, Europe, and North America. <br>
 
                                     </p>
 
