--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ I have been in charge of campaigns on google for clients such as luxury hotels i
                                 
                                  <p>
                                 
-                                My most recent proud product <b>PAY PER HEAD CALCULATOR</b> it’s about an old 5.3v PHP system used to manage large reports with hundreds of filters and record odds scores and agent commissions.<br>
+                                My most recent proud product <b>PAY PER HEAD CALCULATOR</b> it’s about an old 5.3v PHP system used to manage large reports with hundreds of filters and agent commissions calculations.<br>
 
 I make this upgrade to PHP 7.3v on my own in 3 months from the PHP API rest from scratch using a proxy to protect the API endpoint, namespaces, auth, and token verifications.<br>
 
