--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ I have to design a MySQL database with stored procedures to improve performance 
                                            
                                                 <!-- Experience 3 -->
                                             <div class="timeline-item">
-                                                <h4 class="item-title">ZIP Reporting</h4>
+                                                <h4 class="item-title">CIP Reporting</h4>
                                                 <span class="item-small">Reports</span>
                                                 <p class="item-description">Web Developer</p>
                                             </div>
@@ -450,7 +450,7 @@ I have to design a MySQL database with stored procedures to improve performance 
 
 
                                         <div class="download-resume">
-                                            <a href="/antonio-web-developer.pdf" target="_blank" download class="btn btn-secondary">Download PDF Resume</a>
+                                            <a href="/antonio-martinez-web-developer-resume.pdf" target="_blank" download class="btn btn-secondary">Download PDF Resume</a>
                                         </div>
 
 
