--- a/index.html
+++ b/index.html
@@ -208,15 +208,17 @@
                                     </div>
 
                                     <p>                                        
-Full Stack Web Developer with ability to develop or maintain a web system from front-end to backend. <br><br> 
+SR. Full Stack Web Developer with the ability to develop or maintain a web system from front-end to backend.
+ <br><br> 
 
 7 years of experience in developing and deploying projects to internet with success.<br>
+Programmer with great debugging skills and very good dealing with big issues and bugs in JavaScript, Angular CLI, and PHP.<br><br>
 
-Programmer with great debugging skills and very good dealing with big issues and bugs in JavaScript and PHP.<br>
+Many hours refactoring and writing code to develop huge custom websites, WordPress, landing pages with complex tracking methods, big data reports, online games, gambling, scores, and betting systems.<br><br>
+<br><br>
+I have been in charge of campaigns on google for clients such as luxury hotels in Central America and Mexico with a target public in Central Americ, Europe, and North America.
 
-Many hours refactoring and writing code to develop huge custom websites, WordPress, landing pages with complex tracking methods, big data reports. online games, gambling, scores and betting systems.<br><br>
-
-I have been in charge of campaigns on google for clients such as luxury hotels in Central America and Mexico with a target public in Central Americ, Europe, and North America. <br>
+ <br>
 
                                     </p>
 
