--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ SR. Full Stack Web Developer with the ability to develop or maintain a web syste
 7 years of experience in developing and deploying projects to internet with success.<br>
 Programmer with great debugging skills and very good dealing with big issues and bugs in JavaScript, Angular CLI, and PHP.<br><br>
 
-Many hours refactoring and writing code to develop huge custom websites, WordPress, landing pages with complex tracking methods, big data reports, online games, gambling, scores, and betting systems.<br><br>
+Many hours refactoring and writing code to develop hospitality software, huge custom websites, WordPress, landing pages with complex tracking methods, big data reports, online games, gambling, scores, and betting systems.
 <br><br>
 I have been in charge of campaigns on google for clients such as luxury hotels in Central America and Mexico with a target public in Central Americ, Europe, and North America.
 
