--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                             </div>
 
                                             <div class="item">
-                                                <div class="sp-subtitle">Full Stack Web Developer</div>
+                                                <div class="sp-subtitle">Software Engineer</div>
                                             </div>
 
                                         </div>
@@ -181,7 +181,7 @@
                                         <li><span class="title">Phone</span><span class="value"><a href="tel:50661299074"> +506 6129 9074</a></span></li>
                                         <li><span class="title">Availability</span><span class="value available">Available</span></li>
                                         <li><span class="title">Languages</span><span class="value available">Spanish/English/German</span></li>
-                                        <!--<li><span class="title">Desired Salary </span><span class="value available">2500 US$/mo</span></li>-->
+                                        <li><span class="title">Salary Range </span><span class="value available">of $61k-$120k</span></li>
                                     </ul>
                                 </div>
 
