--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                         <li><span class="title">Phone</span><span class="value"><a href="tel:50661299074"> +506 6129 9074</a></span></li>
                                         <li><span class="title">Availability</span><span class="value available">Available</span></li>
                                         <li><span class="title">Languages</span><span class="value available">Spanish/English/German</span></li>
-                                        <li><span class="title">Salary Range </span><span class="value available">$61k-$120k/year</span></li>
+                                       <!-- <li><span class="title">Salary Range </span><span class="value available">$61k-$120k/year</span></li> -->
                                     </ul>
                                 </div>
 
