--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                 <div class="col-sm-6 col-md-6 col-lg-6">
                                     <ul class="info-list">
                                         <li><span class="title">Age</span><span class="value">25</span></li>
-                                        <li><span class="title">Residence</span><span class="value">San José, Costa Rica (GMT-6)</span></li>
+                                        <li><span class="title">Country</span><span class="value">San José, Costa Rica (GMT-6)</span></li>
                                         <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonios.martinez.dev@gmail.com</a> </span></li>
                                         <li><span class="title">Phone</span><span class="value"><a href="tel:50661299074"> +506 6129 9074</a></span></li>
                                         <li><span class="title">Availability</span><span class="value available">Available</span></li>
