--- a/index.html
+++ b/index.html
@@ -220,7 +220,10 @@ Programmer with great debugging skills and very good dealing with big issues and
 
 Many hours refactoring and writing code to develop hospitality software, huge custom websites, WordPress, landing pages with complex tracking methods, big data reports, online games, gambling, scores, and betting systems.
 
- <br>
+ <br><br>
+                                        
+                                        Expertise with Business Rules, Client Scripts, Script Includes, UI Scripts, UI Pages, UI Macros, UI Policies, etc.
+                                        <br>
 
                                     </p>
 
@@ -247,6 +250,7 @@ I have to design a MySQL database with stored procedures to improve performance 
                                 <hr>
                                 
                                     <ul>
+                                        <li>Experience with JavaScript, HTML and ServiceNow Glide API's.</li>
                                         <li>PHP Booking Engine</li>
                                         <li>Masive SMTP Email confirmations using PHP MAILER last version. </li>
                                         <li>HTML Landing pages for marketing campaigns and tracking pixels integrations.</li>
