--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@ I have to design a MySQL database with stored procedures to improve performance 
                                 <hr>
                                 
                                     <ul>
+                                        <li>Experience with Web Service Integrations (SOAP / RESTful)</li>
                                         <li>Experience with JavaScript, HTML and ServiceNow Glide API's.</li>
                                         <li>PHP Booking Engine</li>
                                         <li>Masive SMTP Email confirmations using PHP MAILER last version. </li>
