--- a/index.html
+++ b/index.html
@@ -515,7 +515,11 @@ I have to design a MySQL database with stored procedures to improve performance 
                                             <img src="images/portfolio/tabacon.png" alt="">
                                             <div>
                                                 <h5 class="name">tabacon.com</h5>
-                                                <small>A website build in Wordpress with custom plugins in php and dynamic pages and forms</small>
+                                                <small>At tabacon my task was to develop the reservation forms that receive thousands of requests from all over the world.
+
+They were totally custom plugins and modules, from validating the form fields with javascript and ajax, creating a new record table in the wordpress database, encrypting and protecting sensitive data such as card numbers, sending confirmation emails by SMTP integrating the PHP MAILER library.<br><br>
+                                                All this development was done using the object-oriented programming model and following the MVC architecture.
+                                                </small>
                                                 <i class="fa fa-file-text-o"></i>
                                             </div>
                                         </a>
