--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                         <li><span class="title">Phone</span><span class="value"><a href="tel:50661299074"> +506 6129 9074</a></span></li>
                                         <li><span class="title">Availability</span><span class="value available">Available</span></li>
                                         <li><span class="title">Languages</span><span class="value available">Spanish/English/German</span></li>
-                                        <li><span class="title">Sponsorship </span><span class="value available"> Required</span></li>
+                                        <li><span class="title">Sponsorship Required </span><span class="value available"></span></li>
                                     </ul>
                                 </div>
 
