--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
 
                                 <div class="col-sm-8 col-md-8 col-lg-8">
                                     <div class="title-block">
-                                        <h1>Antonio Martinez</h1>
+                                        <h1>Julio Antonio Martinez</h1>
                                         <div class="owl-carousel text-rotation">
 
                                             <div class="item">
-                                                <div class="sp-subtitle">Full Stack Web Developer</div>
+                                                <div class="sp-subtitle">Senior Web Developer</div>
                                             </div>
 
                                             <div class="item">
