--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- Mobile Header -->
     <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-            <div class="mobile-site-title">Julio Antonio Martinez</div>
+            <div class="mobile-site-title">Julio Martinez</div>
         </div>
 
         <a class="menu-toggle mobile-visible">
