--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
             <div class="site-title-block mobile-hidden">
-                <div class="site-title">Julio Antonio <span>Martinez</span></div>
+                <div class="site-title">Julio <span>Martinez</span></div>
             </div>
 
             <!-- Navigation -->
@@ -68,7 +68,7 @@
                     </li>
 
                     <li>
-                        <a class="pt-trigger" href="#portfolio">Projects</a>
+                        <a class="pt-trigger" href="#portfolio">Portfolio</a>
                     </li> 
                 </ul>
                 <!-- /Main menu -->
@@ -119,7 +119,7 @@
 
                                 <div class="col-sm-8 col-md-8 col-lg-8">
                                     <div class="title-block">
-                                        <h1>Julio Antonio Martinez</h1>
+                                        <h1>Julio Martinez</h1>
                                         <div class="owl-carousel text-rotation">
 
                                             <div class="item">
@@ -135,7 +135,6 @@
 
                                     <div class="social-links">
                                         <a href="skype:antonio_martinez?julitoporta" target="_blank"><i class="fa fa-skype"></i></a>
-                                        <a href="https://www.instagram.com/antoniomartz/" target="_blank"><i class="fa fa-instagram"></i></a>
                                         <a href="https://github.com/MartinezAntonio" target="_blank"><i class="fa fa-github"></i></a>
                                         <a href="https://www.linkedin.com/in/antonio-martinez-212572127/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                     </div>
