--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                         </div>
 
                                         <p>
-7 years of experience developing projects to the Internet with success. Excellent debugging skills and expert dealing with big issues.
+Dynamic, detail-oriented, bilingual Software Engineer with 7 years of proven professional experience in designing, optimizing and developing back-end applications functionalities and front-end user interfaces, testing, and excellent debugging skills that improve data retrieval and workflow efficiencies.
                                             
                                             <br>
                                           
