--- a/index.html
+++ b/index.html
@@ -212,13 +212,17 @@ Dynamic, detail-oriented, bilingual Software Engineer with 7 years of proven pro
                                     </div>
 
                                     <p>                                        
-Senior Web Developer with 7 years of experience developing projects to the Internet with success. Excellent debugging skills and expert dealing with big issues.
+Dynamic, detail-oriented, bilingual Software Engineer with 7 years of proven professional experience in designing, optimizing and developing back-end applications functionalities and front-end user interfaces, testing and debuggin that improve data retrieval and workflow efficiencies.
  <br><br> 
 
-Many hours refactoring and writing code to develop hospitality software, huge custom websites, WordPress, landing pages with complex tracking methods, big data reports, sports lines scores, and betting systems.<br><br>
- <br>
+Excels at learning new technologies and applying them to develop clean and well-structured code.<br><br>
+ 
+                                        Experienced at working on projects at all stages of the Software Development Life Cycle (SDLC) from
+idea to development to delivering the completed product. Promoted to positions of increasing responsibility by
+exceeding overal! performance expectations, outstanding leadership ability, and customer service attitude.
                                         
-                                        Expertise with Business Rules, Client Scripts, Script Includes, UI Scripts, UI Pages, UI Macros, UI Policies, etc.
+                                        <br><br>
+                                        Expertise with Business Rules, Client Scripts, UI Scripts, UI Pages.
                                         <br>
 
                                     </p>
