--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
             <div class="site-title-block mobile-hidden">
-                <div class="site-title">Julio <span>Martinez</span></div>
+                <div class="site-title">Antonio <span>Martinez</span></div>
             </div>
 
             <!-- Navigation -->
@@ -119,7 +119,7 @@
 
                                 <div class="col-sm-8 col-md-8 col-lg-8">
                                     <div class="title-block">
-                                        <h1>Julio Martinez</h1>
+                                        <h1>Antonio Martinez</h1>
                                         <div class="owl-carousel text-rotation">
 
                                             <div class="item">
@@ -127,7 +127,7 @@
                                             </div>
 
                                             <div class="item">
-                                                <div class="sp-subtitle">Software Engineer</div>
+                                                <div class="sp-subtitle">Senior Web Developer</div>
                                             </div>
 
                                         </div>
@@ -153,7 +153,7 @@
                                         
                                         
                                         <div class="block-title">
-                                            <h3>Hello<span></span></h3>
+                                            <h3><span></span></h3>
                                         </div>
 
                                         <p>
