--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
                                 <div class="col-sm-4 col-md-4 col-lg-4">
                                     <div class="photo">
-                                        <img src="https://raw.githubusercontent.com/MartinezAntonio/martinezantonio.github.io/master/antonio-v2.jpg
+                                        <img src="https://raw.githubusercontent.com/MartinezAntonio/martinezantonio.github.io/master/picture.jpg
 " alt="Antonio Martinez">
                                     </div>
                                     
