--- a/index.html
+++ b/index.html
@@ -412,6 +412,10 @@ exceeding overal! performance expectations, outstanding leadership ability, and 
                                                 <div class="skill-percentage skill-4"></div>
                                             </div>
                                         
+                                                <h4>Postman</h4>
+                                            <div class="skill-container">
+                                                <div class="skill-percentage skill-4"></div>
+                                            </div>
                                             
                                             <h4>GIT</h4>
                                             <div class="skill-container">
