--- a/index.html
+++ b/index.html
@@ -281,6 +281,12 @@ exceeding overal! performance expectations, outstanding leadership ability, and 
                                             </div> -->
                                             <!-- / Experience 1 -->
 
+                                             <div class="timeline-item">
+                                                <h4 class="item-title">NetSoft</h4>
+                                                <span class="item-small">Heredia, Costa Rica</span>
+                                                <p class="item-description">Junior Web Developer</p>
+                                            </div> 
+                                            
                                             <!-- Experience 2 -->
                                            <div class="timeline-item">
                                                 <h4 class="item-title">PROFI</h4>
