--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@ exceeding overal! performance expectations, outstanding leadership ability, and 
                                         <li>Async PHP data, ajax and JSON data manage.</li>
                                         <li>Custom Wordpress, plugins widgets and child themes.</li>
                                         <li>Websites and Web applications Optimization. (Improving the code, minifying, data compressing, etc).</li>
+                                        <li>Cloudbeds Integrations.</li>
                                         <li>Scraping with JavaScript.</li>
                                         <li>Understanding of web master concepts (SSL, IIS, DNS, Reverse proxys, and IP configuration, Cloudflare).</li>
                                     </ul>
