--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/main-green.css?=3" type="text/css">
 
+        <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/MartinezAntonio/martinezantonio.github.io/master/picture.jpg"/>
+        
     <!-- This styles needs for demo -->
     <link rel="stylesheet" href="preview/lmpixels-demo-panel.css" type="text/css">
     <!-- /This styles needs for demo -->
