--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- Mobile Header -->
     <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-            <div class="mobile-site-title">Julio Martinez</div>
+            <div class="mobile-site-title">Antonio Martinez</div>
         </div>
 
         <a class="menu-toggle mobile-visible">
@@ -185,9 +185,8 @@ Dynamic, detail-oriented, bilingual Software Engineer with 7 years of proven pro
                                         <li><span class="title">Country</span><span class="value">San José, Costa Rica (GMT-6)</span></li>
                                         <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonios.martinez.dev@gmail.com</a> </span></li>
                                         <li><span class="title">Phone</span><span class="value"><a href="tel:50661299074"> +506 6129 9074</a></span></li>
-                                   
                                         <li><span class="title">Languages</span><span class="value available">Spanish/English/German</span></li>
-                              
+                                        <li><span class="title">IDE Stack</span><span class="value available">WebStorm/PHPStorm/Navicat</span></li>
                                     </ul>
                                 </div>
 
