--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Dynamic, detail-oriented, bilingual Software Engineer with 7 years of proven pro
                                         <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonios.martinez.dev@gmail.com</a> </span></li>
                                         <li><span class="title">Phone</span><span class="value"><a href="tel:50661299074"> +506 6129 9074</a></span></li>
                                         <li><span class="title">Languages</span><span class="value available">Spanish/English/German</span></li>
-                                        <li><span class="title">IDE Stack</span><span class="value available">WebStorm/PHPStorm/Navicat</span></li>
+                                        <li><span class="title">IDE Stack</span><span class="value available">WebStorm/PHPStorm/Navicat/GIT Bash</span></li>
                                     </ul>
                                 </div>
 
