--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                         </div>
 
                                         <p>
-Dynamic, detail-oriented, bilingual Software Engineer with 7 years of proven professional experience in designing, optimizing and developing back-end applications functionalities and front-end user interfaces, testing, and excellent debugging skills that improve data retrieval and workflow efficiencies.
+Dynamic, detail-oriented, bilingual Software Engineer with 7 years of proven professional experience in designing, optimizing, and developing PHP back-end applications functionalities and JavaScript front-end user interfaces, testing, and with excellent debugging skills that improve data retrieval and workflow efficiencies.
                                             
                                             <br>
                                           
