--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
                               <hr>
                               </p>
                               <div class="block-title">
-                                 <h3>Projects</h3>
+                          
+                                 <span>Projects</span>
                               </div>
                            
                            <hr>
