--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
                               <ul>
                                  <li>Write the script that would manage the entry and cancellation of reservations.</li>
                                  <li>Write the script that would manage the calendar and inventory of the accommodations.</li>
-                                 <li>⦁	Encrypt the payment form and Integrate the payment gateway, Paypal and Stripe.</li>
+                                 <li>Encrypt the payment form and Integrate the payment gateway, Paypal and Stripe.</li>
                                  <li>System of email confirmations by SMTP.</li>
                               </ul>
                            
                               <h4>Technologies and versions used for this product.</h4>
                               <hr>
                               <ul>
-                                 <liPHP 7.0</li>
+                                 <li>PHP 7.0</li>
                                  <li>MySQL 5.7</li>
                                  <li>Vanilla JavaScript</li>
                                  <li>JQuery 3.2</li>
