--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                               </p>
                               <div class="block-title">
                           
-                                <h3><span>Projects</span></h3>
+                                <h3><span>Projects => </span></h3>
                               </div>
                            
                            <hr>
