--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                               <h3>B.O.S - Booking Management System</h3>
                            
                               <p>
-                                 I was in charge of the development of a reservation system for hotels called B.O.S that is currently operating in Mexico and part of Central America that receives reservations from all over the world. 
+                                 I was in charge of the development of a reservation system for hotels called <b>B.O.S</b> that is currently operating in Mexico and part of Central America that receives reservations from all over the world. 
                                  <br><br>
                                  Besides being the product owner, I was also responsible for writing the code and integrating the following functionalities listed below.
                               </p>
