--- a/index.html
+++ b/index.html
@@ -236,10 +236,13 @@ I used a customizable UI Kit called Nebular which already had some security and 
                               <h4>Technologies and versions used for this product.</h4>
                               <hr>
                               <ul>
+                                 <li>curl 7.6</li>
                                  <li>PHP 7.3</li>
                                  <li>SQL Server 13.0</li>
                                  <li>Angular CLI version 8 and 9</li>
                                  <li>Windows IIS 10.0</li>
+                                 <li>Ag-grid Package version 24.0.0</li>
+                                 
                               </ul>
                             </div>
                            
